Add text for upload pcap file

--- a/jquery-file-upload/index.html
+++ b/jquery-file-upload/index.html
@@ -85,6 +85,7 @@
         </div>
         <div class="panel-body">
             <ul>
+                <li>Upload only PCAP file.</li>
                 <li>The file size limit is 5GB.</li>
                 <li>You can drag-and-drop files to upload them.</li>
             </ul>
